2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Visual Studio solution and projects.
	* msvc/roboptim-core-dummy-plugin/roboptim-core-dummy-plugin.vcproj: New.
	* msvc/roboptim-core/config.h: New.
	* msvc/roboptim-core/roboptim-core.sln: New.
	* msvc/roboptim-core/roboptim-core.vcproj: New.
	* msvc/simple/simple.vcproj: New.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove dots in macros to ensure Windows portability.
	* src/debug.hh: Make CPP code more portable.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Add ROBOPTIM_DLLAPI to ensure Windows portability.
	* include/roboptim/core/util.hh: Add missing qualifier.

2009-08-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix comment.
	* include/roboptim/core/solver-factory.hxx: Here.

2009-08-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Add dllexport/dllimport for Windows compatibility.
	* include/Makefile.am,
	* include/roboptim/core/constant-function.hh,
	* include/roboptim/core/debug.hh,
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/function.hh,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/identity-function.hh,
	* include/roboptim/core/indent.hh,
	* include/roboptim/core/io.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,
	* include/roboptim/core/portability.hh,ew.
	* include/roboptim/core/quadratic-function.hh,
	* include/roboptim/core/result-with-warnings.hh,
	* include/roboptim/core/result.hh,
	* include/roboptim/core/solver-error.hh,
	* include/roboptim/core/solver-warning.hh,
	* include/roboptim/core/sys.hh,
	* include/roboptim/core/twice-derivable-function.hh: Here.

2009-08-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Add new variant of foreach method.
	* include/roboptim/core/function.hh: Here.
