@@ -1,3 +1,8 @@
+2009-08-18  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Display if constraints are satisfied or not when outputing a problem.
+	* include/roboptim/core/problem.hxx: Here.
+
 2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Add Visual Studio solution and projects.
